updated events for better maintainability
