# internal/domains/event/handler/handler.go
@@ -3,11 +3,13 @@ package event
 import (
 	dto "api/internal/domains/event/dto"
 	repository "api/internal/domains/event/persistence/repository"
+	errLib "api/internal/libs/errors"
 	responseHandlers "api/internal/libs/responses"
 	"api/internal/libs/validators"
 	"github.com/go-chi/chi"
 	"github.com/google/uuid"
 	"net/http"
+	"time"
 )
 
 // EventsHandler provides HTTP handlers for managing events.
@@ -21,17 +23,91 @@ func NewEventsHandler(repo *repository.Repository) *EventsHandler {
 
 // GetEvents retrieves all events based on filter criteria.
 // @Summary Get all events
-// @Description Retrieve all events, with optional filters by course, location, and practice.
+// @Description Retrieve all events within a specific date range, with optional filters by course, location, game, and practice.
 // @Tags events
+// @Param after query string true "Retrieve events after this date (format: YYYY-MM-DD)" example("2024-05-01")
+// @Param before query string true "Retrieve events before this date (format: YYYY-MM-DD)" example("2024-06-01")
+// @Param game_id query string false "Filter by game ID (UUID format)" example("550e8400-e29b-41d4-a716-446655440000")
+// @Param course_id query string false "Filter by course ID (UUID format)" example("550e8400-e29b-41d4-a716-446655440000")
+// @Param practice_id query string false "Filter by practice ID (UUID format)" example("550e8400-e29b-41d4-a716-446655440000")
+// @Param location_id query string false "Filter by location ID (UUID format)" example("550e8400-e29b-41d4-a716-446655440000")
 // @Accept json
 // @Produce json
-// @Success 200 {array} event.ResponseDto "GetMemberships of events retrieved successfully"
-// @Failure 400 {object} map[string]interface{} "Bad Request: Invalid input"
+// @Success 200 {array} event.ResponseDto "List of events retrieved successfully"
+// @Failure 400 {object} map[string]interface{} "Bad Request: Invalid input format or missing required parameters"
 // @Failure 500 {object} map[string]interface{} "Internal Server Error"
 // @Router /events [get]
 func (h *EventsHandler) GetEvents(w http.ResponseWriter, r *http.Request) {
 
-	events, err := h.Repo.GetEvents(r.Context())
+	query := r.URL.Query()
+
+	var after, before time.Time
+
+	var courseID, gameID, locationID, practiceID uuid.UUID
+
+	if afterStr := query.Get("after"); afterStr != "" {
+		afterDate, err := time.Parse("2006-01-02", afterStr)
+		if err != nil {
+			responseHandlers.RespondWithError(w, errLib.New("invalid 'after' date format, expected YYYY-MM-DD", http.StatusBadRequest))
+			return
+		}
+		after = afterDate
+	} else {
+		responseHandlers.RespondWithError(w, errLib.New("'after' date is required", http.StatusBadRequest))
+		return
+	}
+
+	if beforeStr := query.Get("before"); beforeStr != "" {
+		beforeDate, err := time.Parse("2006-01-02", beforeStr)
+		if err != nil {
+			responseHandlers.RespondWithError(w, errLib.New("invalid 'before' date format, expected YYYY-MM-DD", http.StatusBadRequest))
+			return
+		}
+		before = beforeDate
+	} else {
+		responseHandlers.RespondWithError(w, errLib.New("'before' date is required", http.StatusBadRequest))
+		return
+	}
+
+	if gameIDStr := query.Get("game_id"); gameIDStr != "" {
+		id, err := validators.ParseUUID(gameIDStr)
+
+		if err != nil {
+			responseHandlers.RespondWithError(w, errLib.New("invalid 'game_id' format, expected uuid format", http.StatusBadRequest))
+			return
+		}
+
+		gameID = id
+	}
+
+	if courseIDStr := query.Get("course_id"); courseIDStr != "" {
+		id, err := validators.ParseUUID(courseIDStr)
+		if err != nil {
+			responseHandlers.RespondWithError(w, errLib.New("invalid 'course_id' format, expected uuid format", http.StatusBadRequest))
+			return
+		}
+		courseID = id
+	}
+
+	if practiceIDStr := query.Get("practice_id"); practiceIDStr != "" {
+		id, err := validators.ParseUUID(practiceIDStr)
+		if err != nil {
+			responseHandlers.RespondWithError(w, errLib.New("invalid practice_id format, expected uuid format", http.StatusBadRequest))
+			return
+		}
+		practiceID = id
+	}
+
+	if locationIDStr := query.Get("location_id"); locationIDStr != "" {
+		id, err := validators.ParseUUID(locationIDStr)
+		if err != nil {
+			responseHandlers.RespondWithError(w, errLib.New("invalid 'location_id' format, expected uuid format", http.StatusBadRequest))
+			return
+		}
+		locationID = id
+	}
+
+	events, err := h.Repo.GetEvents(r.Context(), after, before, courseID, practiceID, gameID, locationID)
 
 	if err != nil {
 		responseHandlers.RespondWithError(w, err)
@@ -49,13 +125,13 @@ func (h *EventsHandler) GetEvents(w http.ResponseWriter, r *http.Request) {
 
 // GetEvent retrieves detailed information about a specific event.
 // @Summary Get event details
-// @Description Retrieves details of a specific event based on its HubSpotId.
+// @Description Retrieves details of a specific event based on its ID.
 // @Tags events
 // @Accept json
 // @Produce json
 // @Param id path string true "Event ID"
 // @Success 200 {object} event.ResponseDto "Event details retrieved successfully"
-// @Failure 400 {object} map[string]interface{} "Bad Request: Invalid HubSpotId"
+// @Failure 400 {object} map[string]interface{} "Bad Request: Invalid ID"
 // @Failure 404 {object} map[string]interface{} "Not Found: Event not found"
 // @Failure 500 {object} map[string]interface{} "Internal Server Error"
 // @Router /events/{id} [get]
@@ -127,7 +203,7 @@ func (h *EventsHandler) CreateEvent(w http.ResponseWriter, r *http.Request) {
 	responseHandlers.RespondWithSuccess(w, responseBody, http.StatusCreated)
 }
 
-// UpdateEvent updates an existing event by HubSpotId.
+// UpdateEvent updates an existing event by ID.
 // @Summary Update an event
 // @Description Updates the details of an existing event.
 // @Tags events
@@ -170,15 +246,15 @@ func (h *EventsHandler) UpdateEvent(w http.ResponseWriter, r *http.Request) {
 	responseHandlers.RespondWithSuccess(w, responseBody, http.StatusNoContent)
 }
 
-// DeleteEvent deletes an event by HubSpotId.
+// DeleteEvent deletes an event by ID.
 // @Summary Delete an event
-// @Description Deletes an event by its HubSpotId.
+// @Description Deletes an event by its ID.
 // @Tags events
 // @Accept json
 // @Produce json
 // @Param id path string true "Event ID"
 // @Success 204 {object} map[string]interface{} "No Content: Event deleted successfully"
-// @Failure 400 {object} map[string]interface{} "Bad Request: Invalid HubSpotId"
+// @Failure 400 {object} map[string]interface{} "Bad Request: Invalid ID"
 // @Failure 404 {object} map[string]interface{} "Not Found: Event not found"
 // @Failure 500 {object} map[string]interface{} "Internal Server Error"
 // @Router /events/{id} [delete]
